added a heuristic based on first fit algorithm of bin packing problem

--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -11,6 +11,7 @@
   howpublished = "ASCAC committee report, URL:
                  \url{https://science.energy.gov/\~/media/ascr/ascac/pdf/meetings/20140210/Top10reportFEB14.pdf}",
   note =         "",
+    year=   "2014",
   title =        "Top Ten Exascale Research Challenges",
   
 }
