--- a/ICPP-19/communications.tex
+++ b/ICPP-19/communications.tex
@@ -147,7 +147,7 @@
 	In the last few decades, there is a drastic improvement in the hardware to provide perminent rate of computation, but little improvement has been achieved for the rate of data movement. With extreme scale computing, supercomputers face bottlenecks due to the need of large amount of data~\cite{ascaccommitteereport2014,yelick2016}. Therefore focus of HPC community is now changing towards avoiding, hiding and minimizing communication costs.
 	
 	
-	Certain applications such as dense linear algebra kernels have regular structure. Therefore, it is possible to associate priorities, based on the task graph structure, with computations, which runtime uses to make the execution efficient. In irregular applications, programmers do not know the precise structure of the task graphs in advance, tasks are added recursively based on certain sentinel constraints. For such applications, runtime sees a set of independent ready tasks and schedule them on different processing units. It is extremely important for runtimes to decide the order of data transfers for these scheduled computations such that overlap between computations and communications can be maximised. This is the main topic of this article. We prove that order of communications on two memory nodes with the objective of minimizing the makespan is NP-Complete. Our proof is inspired from work by ~\cite{Papadimitriou:1980:FSL:322203.322213}, which applies a similar technique for 2-machine flowshop problem. The main difference with their and our approach is that they consider a bounded number of tasks can await execution on second machine. On the contrary, our approach is designed for tasks appearing in scientific workloads whose memory requirements are highly irregular and memory is acquired before starting the data transfer on communication resource. We propose different strategies for runtimes such that it can maximize the overlap of computation and communication for kernels running on two different memory nodes. We evaluate our strategies on a cluster of homogeneous nodes. But our approach is generic and easily adaptable to any system which operates on different memory spaces. Here are the important contributions of this paper.
+	Certain applications such as dense linear algebra kernels have regular structure. Therefore, it is possible to associate priorities, based on the task graph structure, with computations, which runtime uses to make the execution efficient. In irregular applications, programmers do not know the precise structure of the task graphs in advance, tasks are added recursively based on certain sentinel constraints. For such applications, runtime sees a set of independent ready tasks and schedule them on different processing units. It is extremely important for runtimes to decide the order of data transfers for these scheduled computations such that overlap between computations and communications can be maximised. This is the main topic of this article. We prove that order of communications on two memory nodes with the objective of minimizing the makespan is NP-Complete. Our proof is inspired from work by ~\cite{Papadimitriou:1980:FSL:322203.322213}, which applies a similar technique for 2-machine flowshop problem. The main difference with their and our approach is that they consider a bounded number of tasks can await execution on second machine and buffer is acquired after completing the task on first machine. On the contrary, our approach is designed for tasks appearing in scientific workloads whose memory requirements are highly irregular and memory is acquired before starting the data transfer on communication resource. We propose different strategies for runtimes such that it can maximize the overlap of computation and communication for kernels running on two different memory nodes. We evaluate our strategies on a cluster of homogeneous nodes. But our approach is generic and easily adaptable to any system which operates on different memory spaces. Here are the important contributions of this paper.
 	
 	
 	\renewcommand{\labelitemi}{$\bullet$}
@@ -252,7 +252,7 @@ Let \scomm($i$) and  \scomp($i$) represent the start times of task $i$ on commun
 		\end{algorithmic}
 	\end{algorithm}
 	
-	We also prove optimality of Algorithm~\ref{alg:OrderOfExecutionInfinteMemory} in a different way, which is available in an extended version(cite).
+	We also prove optimality of Algorithm~\ref{alg:OrderOfExecutionInfinteMemory} differently in an extended version(cite).
 	\subsection{Finite Memory}
 	
 	We now consider the general case, in which the memory limit is a
@@ -313,7 +313,7 @@ Let \scomm($i$) and  \scomp($i$) represent the start times of task $i$ on commun
 		\end{table}
 		
 		
-		$Transfer time = Latency + \frac{Data Volume}{Bandwidth}$. For simplicity we consider $Latency=0$ and $Bandwidth=1$, (implies Input data volume = Input transfer time). Otherwise, we can adjust $C$ in a way such that at any point in a schedule at max one $K_i$ and three $A_i$ tasks can be active.
+		As \textit{Transfer time = Latency + (Data Volume)/Bandwidth}. For simplicity, we consider input transfer time is same as input data volume (i.e., \textit{Latency=0} and \textit{Bandwidth=1}). Otherwise, we can adjust $C$ such that at any point in a schedule at max one $K_i$ and three $A_i$ tasks can be active.
 		
 		We show that $I$ has a schedule $S$ with makespan at most $L$ if and
 		only if the original \threepart instance has a solution. Notice that
@@ -417,7 +417,7 @@ Let \scomm($i$) and  \scomp($i$) represent the start times of task $i$ on commun
 	\section{Data Transfer Order heuristics}
 	\label{sec:heuristics}
 	
-	The algorithm presented in the Section~\ref{sec:theoreticalProof} achieves optimal makespan when there is not any memory capacity constraint. This optimal value indicates a lower bound on the makespan. We use $optimal\_makespan\_infinite\_memory$ ($OMIM$) to represent this value. We assess the efficiency of other proposed heuristics in limited memory capacity in Section~\ref{sec:exp} with respect to this lower bound, $OMIM$.
+	The algorithm presented in Section~\ref{sec:theoreticalProof} achieves optimal makespan when there is not any memory capacity constraint. This optimal value indicates a lower bound on the makespan. We use $optimal\_ \allowbreak makespan\_  \allowbreak infinite\_  \allowbreak memory$ ($OMIM$) to represent this value. We assess the efficiency of other proposed heuristics in limited memory capacity in Section~\ref{sec:exp} with respect to this lower bound, $OMIM$.
 	
 	
 	We classify our heuristics into mainly three categories. In the first category, the order of all computations and communications is computed in advance and the same order is followed on both resources. While in the second category, the best suited next task is chosen based on different criteria. In the last category, which is based on combination of strategies of the other two categories, we precompute the order and try to follow it as much as possible, but when the precomputed schedule induces idle time then we look for the best suited next task. In all of our strategies (except linear programming based strategy) order of communications and computations, are same.
@@ -439,26 +439,27 @@ Let \scomm($i$) and  \scomp($i$) represent the start times of task $i$ on commun
 	%%%%string alg_name="optimal_order_infinite_memory_maximum_accelerated\_task\_respects\_memory\_restriction";
 	
 	\begin{enumerate}[label=\roman*)]
-		\item $order\_of\_optimal\_strategy\_infinite\_memory $ ($OOSIM$): Order of processing is obtained by Algorithm~\ref{alg:OrderOfExecutionInfinteMemory}. At each point in the schedule memory capacity is respected. Hence the makespan of this heuristic may be completely different from $OMIM$.
+		\item $order  \_ \allowbreak  \allowbreak of  \_ \allowbreak  \allowbreak optimal \_ \allowbreak strategy \_ \allowbreak infinite \_ \allowbreak memory $ ($OOSIM$): Order of processing is obtained by Algorithm~\ref{alg:OrderOfExecutionInfinteMemory}. At each point in the schedule memory capacity is respected. Hence the makespan of this heuristic may be completely different from $OMIM$.
 		
-		\item $increasing\_order\_of\_communication\_strategy$ ($IOCMS$): Order is obtained by sorting all tasks in non-decreasing order of communication time. 
+		\item $increasing \_ \allowbreak order \_ \allowbreak of \_ \allowbreak communication \_ \allowbreak strategy$ ($IOCMS$): Order is obtained by sorting all tasks in non-decreasing order of communication time. 
 		
-		\item $decreasing\_order\_of\_computation\_strategy$ ($DOCPS$): Order is obtained by sorting all tasks in non-increasing order of computation time. 
-		\item $increasing\_order\_of\_communication\_plus\_computation\_strategy$ ($IOCCS$): Order is obtained by sorting all tasks in non-decreasing order of sum of communication and computation times.
-		\item $decreasing\_order\_of\_communication\_plus\_computation\_strategy$ ($DOCCS$): Order is obtained by sorting all tasks in non-increasing order of sum of communication and computation times.
+		\item $decreasing \_ \allowbreak order \_ \allowbreak of \_ \allowbreak computation \_ \allowbreak strategy$ ($DOCPS$): Order is obtained by sorting all tasks in non-increasing order of computation time. 
+		\item $increasing \_ \allowbreak order \_ \allowbreak of \_ \allowbreak communication \_ \allowbreak plus \_ \allowbreak computation \_ \allowbreak strategy$ ($IOCCS$): Order is obtained by sorting all tasks in non-decreasing order of sum of communication and computation times.
+		\item $decreasing \_ \allowbreak order \_ \allowbreak of \_ \allowbreak communication \_ \allowbreak plus \_ \allowbreak computation \_ \allowbreak strategy$ ($DOCCS$): Order is obtained by sorting all tasks in non-increasing order of sum of communication and computation times.
 		
 	\end{enumerate}
 	\begin{table}[htb]
 		\begin{center}
 			
-			\begin{tabular}{|c|c|c|}
+			\begin{tabular}{|c|c|c|c|}
 				\hline
-				\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
-				&=Comm Volume& \\ \hline
-				A & 3 & 2\\ \hline
-				B & 1 & 3\\ \hline
-				C & 4 & 4\\ \hline
-				D & 2 & 1\\ \hline
+%%				\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
+%%				&=Comm Volume& \\ \hline
+				Task & Comm Volume & Comm Time & Comp Time\\ \hline 
+				A & 3 & 3 &  2\\ \hline
+				B & 1 & 1 & 3\\ \hline
+				C & 4 & 4 & 4\\ \hline
+				D & 2 & 2 & 1\\ \hline
 			\end{tabular}
 			\caption{\label{tab:staticOrderExample} A task set for static order schedules.}
 		\end{center}
@@ -558,33 +559,34 @@ Let \scomm($i$) and  \scomp($i$) represent the start times of task $i$ on commun
 	
 	Fig~\ref{fig:staticOrderExample} shows schedules for all proposed heuristics of this class for the task set of Table~\ref{tab:staticOrderExample}.
 	\subsection{Dynamic Selection}
-	%%%%string alg_name="largest_communication\_task\_respects\_memory\_restriction";
-	%%%%string alg_name="smallest_communication\_task\_respects\_memory\_restriction";
-	%%%%string alg_name="maximum_accelerated\_task\_respects\_memory\_restriction";
+	%%%%string alg_name="largest_communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction";
+	%%%%string alg_name="smallest_communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction";
+	%%%%string alg_name="maximum_accelerated \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction";
 	
 	In this class of strategy, when communication channel is idle, a task is chosen which satisfies the selection criteria maximally among other tasks. For example, if the selection criteria is to choose a highly compute intensive task, then we calculate the ratio of compute time and communication time for all tasks, and the task with the maximum ratio is selected (ties are broken randomly). As we assume that order on both channels is same, hence order on compute channel will follow the order of communication resource.
 	
 	We select a set of tasks which induce minimum idle time on compute channel and satisfy available memory requirement. Then a task is chosen for processing from this set based on the following heuristics.
 	\begin{enumerate}[label=\roman*)]
-		%%	\item $largest_communication\_task\_respects\_memory\_restriction$: We select a set of tasks which induce minimum idle time on compute channel. A task with the largest communication time is chosen from this set. Memory requirement of this task should not be more than presently available memory. 
-		%%	\item $smallest_communication\_task\_respects\_memory\_restriction$: A task with the smallest communication time is chosen. Memory requirement of this task should not be more than presently available memory. 
-		%%	\item $maximum_accelerated\_task\_respects\_memory\_restriction$: We select a set of tasks which induce minimum idle time on compute channel. A task with the maximum ratio of compute time to communication time is chosen from this set. Memory requirement of this task should not be more than presently available memory.
+		%%	\item $largest_communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$: We select a set of tasks which induce minimum idle time on compute channel. A task with the largest communication time is chosen from this set. Memory requirement of this task should not be more than presently available memory. 
+		%%	\item $smallest_communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$: A task with the smallest communication time is chosen. Memory requirement of this task should not be more than presently available memory. 
+		%%	\item $maximum_accelerated \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$: We select a set of tasks which induce minimum idle time on compute channel. A task with the maximum ratio of compute time to communication time is chosen from this set. Memory requirement of this task should not be more than presently available memory.
 		
-		\item $largest\_communication\_task\_respects\_memory\_restriction$ ($LCMR$): A task with the largest communication time is chosen. 
-		\item $smallest\_communication\_task\_respects\_memory\_restriction$ ($SCMR$): A task with the smallest communication time is chosen.
-		\item $maximum\_accelerated\_task\_respects\_memory\_restriction$ ($MAMR$): A task with the maximum ratio of compute time to communication time is chosen.
+		\item $largest \_ \allowbreak communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$ ($LCMR$): A task with the largest communication time is chosen. 
+		\item $smallest \_ \allowbreak communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$ ($SCMR$): A task with the smallest communication time is chosen.
+		\item $maximum \_ \allowbreak accelerated \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$ ($MAMR$): A task with the maximum ratio of compute time to communication time is chosen.
 	\end{enumerate}
 	\begin{table}[htb]
 		\begin{center}
 			
-			\begin{tabular}{|c|c|c|}
+			\begin{tabular}{|c|c|c|c|}
 				\hline
-				\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
-				&=Comm Volume& \\ \hline
-				A & 3 & 2\\ \hline
-				B & 1 & 6\\ \hline
-				C & 4 & 6\\ \hline
-				D & 5 & 1\\ \hline
+%%				\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
+%%				&=Comm Volume& \\ \hline
+				Task & Comm Volume & Comm Time & Comp Time\\ \hline 
+				A & 3 & 3 & 2\\ \hline
+				B & 1 & 1 &  6\\ \hline
+				C & 4 & 4 & 6\\ \hline
+				D & 5 & 5 & 1\\ \hline
 			\end{tabular}
 			\caption{\label{tab:dynamicSelectionExample} A task set for dynamic schedules.}
 		\end{center}
@@ -638,30 +640,31 @@ Let \scomm($i$) and  \scomp($i$) represent the start times of task $i$ on commun
 	\subsection{Static Order with Dynamic Corrections}
 	
 	In this class of strategy, we precompute the order of tasks based on different criteria and then try to follow the same order as much as possible. But when communication resource is idle due to memory requirement of the next task in the obtained order, then we select a task similar to previous strategy. After a task is selected then we update the remaining order without this task. This class of strategy takes advantage of static information in the form of precomputed order and dynamic correction to minimize the idle time due to memory constraint.
-	%%%%alg_name="optimal_order_infinite_memory_largest_communication\_task\_respects\_memory\_restriction";
-	%%%%string alg_name="optimal_order_infinite_memory_smallest_communication\_task\_respects\_memory\_restriction";
-	%%%%string alg_name="optimal_order_infinite_memory_maximum_accelerated\_task\_respects\_memory\_restriction";
+	%%%%alg_name="optimal_order_infinite_memory_largest_communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction";
+	%%%%string alg_name="optimal_order_infinite_memory_smallest_communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction";
+	%%%%string alg_name="optimal_order_infinite_memory_maximum_accelerated \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction";
 	
 	Initial order is obtained by Algorithm~\ref{alg:OrderOfExecutionInfinteMemory}. When communication resource is idle due to memory requirement of the next task in the order, then we select a set of tasks which induce minimum idle time on compute channel and satisfy memory requirement. We define the following heuristics based on how we select a task from this set. After that order of remaining tasks is updated without this task.
 	
 	\begin{enumerate}[label=\roman*)]
-		\item $optimal\_order\_infinite\_memory\_largest\_communication\_task\_respects\_memory\_restriction$ ($OOLCMR$): A task with the largest communication time is chosen from the set.
-		\item $optimal\_order\_infinite\_memory\_smallest\_communication\_task\_respects\_memory\_restriction$ ($OOSCMR$): A task with the smallest communication time is chosen from the set.
-		\item $optimal\_order\_infinite\_memory\_maximum\_accelerated\_task\_respects\_memory\_restriction$ ($OOMAMR$): A task, whose ratio of compute time to communication time is maximum, is chosen from the set .
+		\item $optimal \_ \allowbreak order \_ \allowbreak infinite \_ \allowbreak memory \_ \allowbreak largest \_ \allowbreak communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$ ($OOLCMR$): A task with the largest communication time is chosen from the set.
+		\item $optimal \_ \allowbreak order \_ \allowbreak infinite \_ \allowbreak memory \_ \allowbreak smallest \_ \allowbreak communication \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$ ($OOSCMR$): A task with the smallest communication time is chosen from the set.
+		\item $optimal \_ \allowbreak order \_ \allowbreak infinite \_ \allowbreak memory \_ \allowbreak maximum \_ \allowbreak accelerated \_ \allowbreak task \_ \allowbreak respects \_ \allowbreak memory \_ \allowbreak restriction$ ($OOMAMR$): A task, whose ratio of compute time to communication time is maximum, is chosen from the set .
 	\end{enumerate}
 	
 	\begin{table}[htb]
 		\begin{center}
 			
-			\begin{tabular}{|c|c|c|}
+			\begin{tabular}{|c|c|c|c|}
 				\hline
-				\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
-				&=Comm Volume& \\ \hline
-				A & 4 & 1\\ \hline
-				B & 2 & 6\\ \hline
-				C & 8 & 8\\ \hline
-				D & 5 & 4\\ \hline
-				E & 3 & 2\\ \hline
+%%				\multirow{2}{*}{Task} & Comm Time & \multirow{2}{*}{Comp Time}\\ 
+%%				&=Comm Volume& \\ \hline
+				Task & Comm Volume & Comm Time & Comp Time\\ \hline 
+				A & 4 & 4 &  1\\ \hline
+				B & 2 & 2 & 6\\ \hline
+				C & 8 & 8 & 8\\ \hline
+				D & 5 & 5 & 4\\ \hline
+				E & 3 & 3 & 2\\ \hline
 			\end{tabular}
 			\caption{\label{tab:staticOrderDynamicCorrectionsExample} A task set for static order dynamic corrections schedules.}
 		\end{center}
